# py-otp-gui

./: .gitignore  .pre-commit-config.yaml  README.md  config_manager.py  crypt_utils.py  exceptions.py  extra_windows.py  helper.py  main.py  otp_class.py  pyproject.toml  qr_generator.py  requirements-dev.txt  requirements.txt  service.py
.github/workflows/: ci.yml
tests/: conftest.py  test_config_manager.py  test_crypt_utils.py  test_otp_class.py  test_qr_generator.py  test_service.py
